@@ -14,7 +14,6 @@ import org.elasticsearch.ElasticsearchStatusException;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.bytes.BytesArray;
 import org.elasticsearch.common.bytes.BytesReference;
-import org.elasticsearch.common.logging.LoggerMessageFormat;
 import org.elasticsearch.common.unit.ByteSizeValue;
 import org.elasticsearch.core.Booleans;
 import org.elasticsearch.core.CheckedConsumer;
@@ -42,7 +41,6 @@ import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import static org.elasticsearch.common.unit.ByteSizeValue.parseBytesSizeValue;
 import static org.elasticsearch.core.TimeValue.parseTimeValue;
@@ -127,6 +125,9 @@ public class RestRequest implements ToXContent.Params {
         assert other.parserConfig.restApiVersion().equals(other.restApiVersion);
         this.parsedAccept = other.parsedAccept;
         this.parsedContentType = other.parsedContentType;
+        if (other.xContentType.get() != null) {
+            this.xContentType.set(other.xContentType.get());
+        }
         this.restApiVersion = other.restApiVersion;
         this.parserConfig = other.parserConfig;
         this.httpRequest = other.httpRequest;
@@ -387,7 +388,7 @@ public class RestRequest implements ToXContent.Params {
      * @return the list of currently unconsumed parameters.
      */
     List<String> unconsumedParams() {
-        return params.keySet().stream().filter(p -> consumedParams.contains(p) == false).collect(Collectors.toList());
+        return params.keySet().stream().filter(p -> consumedParams.contains(p) == false).toList();
     }
 
     public float paramAsFloat(String key, float defaultValue) {
@@ -613,9 +614,8 @@ public class RestRequest implements ToXContent.Params {
 
     public static class MediaTypeHeaderException extends RuntimeException {
 
-        private String message;
-        private Set<String> failedHeaderNames;
-        private Object[] params;
+        private final String message;
+        private final Set<String> failedHeaderNames;
 
         MediaTypeHeaderException(final RuntimeException cause, String... failedHeaderNames) {
             super(cause);
@@ -629,7 +629,7 @@ public class RestRequest implements ToXContent.Params {
 
         @Override
         public String getMessage() {
-            return LoggerMessageFormat.format(message, params);
+            return message;
         }
     }
 
